tests/paczka1/fuzzy1/37334165.err
Error in line 3: HqTm8FS0VRq A919 45,0
Error in line 9: QBcJqFeZ A559 87,1
Error in line 12: QBcJqFeZ A919 40,8
Error in line 6: cjrZNqaBpmO A944 21,0
Error in line 20: BoTah8BZx A919 60,4
Error in line 22: BoTah8BZx A39 44,5
Error in line 24: qz2Lxm3 A39 93,8
